--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dima</title>
     <script async src="https://api.unitalk.cloud/script/9684/3129"></script>
     <style>
+</head>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
